--- a/data_wrangling_i.Rmd
+++ b/data_wrangling_i.Rmd
@@ -35,3 +35,30 @@ tail(litters_data)
 skimr::skim(litters_data)
 ```
 
+## Try different readin
+
+```{r}
+litters_data = read_csv(file = "./data/FAS_litters.csv", skip = 10, col_names = FALSE)
+```
+
+## Parsing columns
+
+```{r}
+
+```
+
+## Import other types of files
+
+```{r}
+mlb11_data = readxl::read_excel("./data/mlb11.xlsx", n_max = 20,
+                                range = "A1:E17")
+pulse_data = haven::read_sas("./data/public_pulse_data.sas7bdat")
+```
+
+
+
+
+
+
+
+
