--- a/data_wrangling_i.Rmd
+++ b/data_wrangling_i.Rmd
@@ -21,6 +21,9 @@ litters_data = janitor::clean_names(litters_data)
 ```{r}
 pups_data = read_csv(file = "./data/FAS_pups.csv")
 pups_data = janitor::clean_names(pups_data)
+view(pups_data)
+str(pups_data)
+head(pups_data,5)
 ```
 
 
@@ -44,7 +47,9 @@ litters_data = read_csv(file = "./data/FAS_litters.csv", skip = 10, col_names = 
 ## Parsing columns
 
 ```{r}
-
+litters_data = read_csv(file = "./data/FAS_litters.csv",
+                        col_types = cols(
+                          'GD0 weight' = character()))
 ```
 
 ## Import other types of files
@@ -53,6 +58,30 @@ litters_data = read_csv(file = "./data/FAS_litters.csv", skip = 10, col_names = 
 mlb11_data = readxl::read_excel("./data/mlb11.xlsx", n_max = 20,
                                 range = "A1:E17")
 pulse_data = haven::read_sas("./data/public_pulse_data.sas7bdat")
+```
+
+
+```{r}
+litters_data = read_csv("./data/FAS_litters.csv",
+  col_types = "ccddiiii")
+litters_data = janitor::clean_names(litters_data)
+
+pups_data = read_csv("./data/FAS_pups.csv",
+  col_types = "ciiiii")
+pups_data = janitor::clean_names(pups_data)
+```
+
+
+
+```{r}
+pulse_data = haven::read_sas("./data/public_pulse_data.sas7bdat") %>%
+  janitor::clean_names()
+pulse_data
+
+
+pulse_tidy_data = gather(pulse_data, key = visit, value = bdi, bdi_score_bl:bdi_score_12m)
+pulse_tidy_data
+
 ```
 
 
